--- a/Ubuntuupdate.yml
+++ b/Ubuntuupdate.yml
@@ -4,20 +4,24 @@
 # The second task uses the apt module to perform a distribution upgrade, effectively updating all packages to the latest versions.
 # The final task displays a summary of the updates performed.
 
+---
 - name: Update Ubuntu Servers
-  hosts: all
+  hosts: ubuntu_servers
   become: yes  # To run commands with sudo (root) privileges
 
   tasks:
     - name: Update APT package cache
-      apt:
-        update_cache: yes
+      command: /usr/bin/apt-get update
+      register: update_cache_result
+
+    - name: Display APT cache update summary
+      debug:
+        var: update_cache_result.stdout_lines
 
     - name: Upgrade all packages to the latest version
-      apt:
-        upgrade: dist
-      register: update_result
+      command: /usr/bin/apt-get upgrade -y
+      register: upgrade_result
 
-    - name: Display package update summary
+    - name: Display package upgrade summary
       debug:
-        var: update_result.stdout_lines
+        var: upgrade_result.stdout_lines
