--- a/Ubuntuupdate.yml
+++ b/Ubuntuupdate.yml
@@ -11,7 +11,12 @@
 
   tasks:
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
-      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+      apt: 
+        update_cache: yes 
+        force_apt_get: yes 
+        cache_valid_time: 3600
 
     - name: Upgrade all packages on servers
-      apt: upgrade=dist force_apt_get=yes
+      apt: 
+        upgrade: dist 
+        force_apt_get: yes
