--- a/importkey.yml
+++ b/importkey.yml
@@ -1,9 +1,8 @@
+---
 - name: Import GPG key for Kubernetes repository
-  hosts: all
+  hosts: your_target_host
   become: yes
 
   tasks:
-  - name: Import GPG key using apt_key
-    apt_key:
-      url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-      state: present
+    - name: Import GPG key using gpg method
+      shell: curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor -o /usr/share/keyrings/kubernetes-archive-keyring.gpg
