--- a/UpdateServerAPT.yml
+++ b/UpdateServerAPT.yml
@@ -4,8 +4,7 @@
 
   tasks:
   - name: Update APT package cache
-    apt:
-      update_cache: yes
+    shell: sudo apt-get update
     register: update_cache_result
 
   - name: Display APT cache update summary
@@ -13,14 +12,9 @@
       var: update_cache_result.stdout_lines
 
   - name: Upgrade all packages on servers
-    apt:
-      upgrade: yes
+    shell: sudo apt-get upgrade -y
     register: upgrade_result
 
   - name: Display package upgrade summary
     debug:
       var: upgrade_result.stdout_lines
-
-  - name: Reboot if required
-    reboot:
-    when: "'System restart required' in upgrade_result.stdout"
